ecmascript/parser/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6/input.ts.stderr
error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6/input.ts:4:1
  |
4 | }
  | ^

error[1005]: Expected '('
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6/input.ts:4:1
  |
4 | }
  | ^

error[1221]: An overload signature cannot be declared as a generator.
 --> $DIR/tests/typescript-errors/tsc/es6/memberFunctionDeclarations/MemberFunctionDeclaration5_es6/input.ts:3:4
  |
3 |    *
  |    ^

